<resources>
    <string name="app_name" translatable="false">BigBrainVocabBuilder</string>
    <string name="title_activity_settings" translatable="false">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>

    <string name="settings_button_text" translatable="false">"Settings"</string>
    <string name="login_button_text" translatable="false">"Log-In/Register"</string>
    <string name="play_game_crossword" translatable="false">"CROSSWORD"</string>
    <string name="play_game_word_search" translatable="false">"WORD SEARCH"</string>
    <string name="play_game_word_catch" translatable="false">"WORD CATCH"</string>
    <string name="stats_label" translatable="false">"Statistics"</string>
    <string name="words_learned_label" translatable="false">"Words Learned"</string>
    <string name="time_playing_games_label" translatable="false">"Time Spent Playing Games"</string>
    <string name="tests_taken_label" translatable="false">"Tests Taken"</string>
    <string name="time_taking_tests_label" translatable="false">"Time Spent Taking Tests"</string>
    <string name="go_back" translatable="false">"GO BACK"</string>
    <string name="games_completed_label" translatable="false">"Games Completed"</string>
    <string name="game_over_message" translatable="false">"You Win!"</string>
    <string name="game_over_button" translatable="false">"Go Back"</string>
    <string name="questions_asked_label">Questions Asked</string>

    <string name="master_volume" translatable="false">"Master Volume"</string>
    <string name="music" translatable="false">"Music"</string>
    <string name="sound_effects" translatable="false">"Sound Effects"</string>
    <string name="notifications" translatable="false">"Notifications"</string>
    <string name="vibration" translatable="false">"Vibrations"</string>
    <string name="settings" translatable="false">"Settings"</string>

    <string name="results_label" translatable="false">"Test Results"</string>
    <string name="grade_lebel" translatable="false">"Grade:"</string>
    <string name="gradeA_lebel" translatable="false">"A"</string>
    <string name="gradeB_lebel" translatable="false">"B"</string>
    <string name="gradeC_lebel" translatable="false">"C"</string>
    <string name="gradeD_lebel" translatable="false">"D"</string>
    <string name="gradeF_lebel" translatable="false">"F"</string>
    <string name="NA_lebel" translatable="false">"N/A"</string>
    <string name="score" translatable="false">"Score:"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="words_left_label">Words Left to Learn</string>
    <string name="first_name_label">First Name:</string>
    <string name="last_name_label">Last Name:</string>
    <string name="pp_change_label">Take Picture</string>


    <!-- Category Strings -->
    <string name="categoryTitle" translatable="false">Test Category</string>
    <string name="easy" translatable="false">EASY WORDS</string>
    <string name="medium" translatable="false">MEDIUM WORDS</string>
    <string name="hard" translatable="false">HARD WORDS</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>
