<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/categoryTitle"
            android:textSize="50sp"
            android:gravity="center"
            android:background="@color/blueish"
            android:textColor="@color/goldish"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/easyButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/easy"
            android:background="@color/blueish"
            android:textColor="@color/goldish"
            android:onClick="buttonClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/mediumButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/medium"
            android:background="@color/blueish"
            android:textColor="@color/goldish"
            android:onClick="buttonClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/hardButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:text="@string/hard"
            android:background="@color/blueish"
            android:textColor="@color/goldish"
            android:onClick="buttonClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/difficultButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:background="@color/blueish"
            android:src="@drawable/dif"
            android:onClick="buttonClick" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/extremeButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="30dp"
            android:layout_weight="1"
            android:background="@color/blueish"
            android:scaleType="fitCenter"
            android:src="@drawable/extreme"
            android:onClick="buttonClick" />
    </LinearLayout>


</LinearLayout>