<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blueish"
        app:layout_constraintLeft_toRightOf="@id/profile_picture"
        app:layout_constraintTop_toTopOf="@id/profile_picture"
        android:textSize="24sp"
        android:text="FirstName"/>

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blueish"
        app:layout_constraintLeft_toRightOf="@id/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/first_name"
        android:textSize="24sp"
        android:text="LastName"/>

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/profile_picture" >
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blueish"
                android:id="@+id/stats_label"
                android:layout_margin="10dp"
                android:text="@string/stats_label"
                android:textColor="@color/gold"
                android:textSize="40sp"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/words_learned_label"
                android:layout_margin="10dp"
                android:text="@string/words_learned_label" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/words_learned_amount"
                android:layout_margin="10dp"
                android:text="20" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/blueish"
            android:paddingTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/words_left_label"
                android:layout_margin="10dp"
                android:text="@string/words_left_label" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/words_left_amount"
                android:layout_margin="10dp"
                android:text="20" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tests_taken_label"
                android:layout_margin="10dp"
                android:text="@string/tests_taken_label" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tests_taken"
                android:layout_margin="10dp"
                android:text="5" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/blueish"
            android:paddingTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/games_completed_label"
                android:layout_margin="10dp"
                android:text="@string/games_completed_label" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/games_completed"
                android:layout_margin="10dp"
                android:text="7" />
        </TableRow>
    </TableLayout>





</androidx.constraintlayout.widget.ConstraintLayout>