<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold"
    tools:context=".EditProfileActivity">
    <TextView
        android:id="@+id/first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/blueish"
        android:text="@string/first_name_label"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/first_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/first_name_label"
        app:layout_constraintLeft_toRightOf="@id/first_name_label"
        android:layout_marginLeft="30dp"
        android:textSize="24sp"
        android:hint="Enter First Name" />

    <TextView
        android:id="@+id/last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:text="@string/last_name_label"
        android:textColor="@color/blueish"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/last_name_label"
        app:layout_constraintLeft_toRightOf="@id/last_name_label"
        android:textSize="24sp"
        android:layout_marginLeft="30dp"
        android:hint="Enter Last Name" />

    <ImageView
        android:id="@+id/profile_picture2"
        android:scaleType="fitCenter"
        android:layout_width="150dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toBottomOf="@id/last_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/base_profile_pic"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"/>

    <Button
        android:id="@+id/take_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="takePicture"
        app:layout_constraintTop_toTopOf="@id/profile_picture2"
        app:layout_constraintLeft_toRightOf="@id/profile_picture2"
        android:layout_margin="50dp"
        android:textColor="@color/blueish"
        android:text="@string/pp_change_label" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goBack"
        app:layout_constraintTop_toBottomOf="@id/profile_picture2"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_margin="50dp"
        android:textColor="@color/blueish"
        android:text="SAVE" />

</androidx.constraintlayout.widget.ConstraintLayout>